# LangChain

./: .gitattributes  GPT_lim연동(질의해보기).ipynb  LangChain.ipynb  Model_Parameter_비교.ipynb  OutputParser.ipynb  PromptTemplate.ipynb  RAG.ipynb  RAG_실습.ipynb  groq_lim연동(질의해보기).ipynb  groq_lim연동.ipynb  pyproject.toml
LangChain/: GPT_lim연동(질의해보기).ipynb  LangChain.ipynb  Model_Parameter_비교.ipynb
LangChain Tool Calling/: LangChain_Agent_titanic.ipynb  LangChain_ReAct.ipynb  LangGraph.ipynb  LangGraph_실습.ipynb  ToolCalling.ipynb  ToolCalling_실습.ipynb
Ollama/: Ollama.ipynb  Ollama_실습.ipynb  RAG_Ollama.py
Ollama/.gradio/flagged/: dataset1.csv
RAG/: RAG.ipynb  RAG_실습.ipynb
data/: taxinfo.txt
faiss_index/: index.faiss  index.pkl
연습문제/: 문제 1-1.ipynb  문제 1-2.ipynb  문제 1-3.ipynb  문제 2.ipynb  문제 3-1.ipynb  문제 4-1.py  문제 5-1, 5-2.ipynb  문제 5-1.ipynb
